# auto_nomera_v2

./: .dockerignore  .env.dist  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
scripts/: migrate_legacy.py
src/: scheduler.py  worker.py
src/application/: mediator.py
src/application/common/: unsent.py
src/application/dtos/: ad.py  calendar.py  catalog_card.py  deferred_card.py  global_stats.py  payment_stats.py  publication.py  publication_service.py  publication_stats.py  region.py  schedule_stats.py  service_definition.py  slot_key_codec.py  user.py  yookassa.py
src/application/exceptions/: ad.py  payment.py  publication.py  region.py  service_definition.py  store.py  user.py
src/application/services/: payment_notifier.py
src/application/use_cases/: base.py
src/core/: mediator.py
src/core/config/: __init__.py  base.py  database.py  payment.py  telegram.py
src/domain/entities/: ad.py  base.py  payment.py  publication.py  publication_service.py  region.py  service_definition.py  slot_hold.py  slot_state.py  user.py
src/domain/enums/: ad.py  miling.py  payment.py  period.py  publication.py  publication_service.py  region.py  slot.py  user.py
src/domain/events/: base.py  region.py  slot.py  slot_reservation.py  user.py
src/domain/exceptions/: base.py  payment.py  publication.py  region.py  slot.py  slot_reservation.py  user.py
src/domain/value_objects/: ad_content.py  calendar_slot_view.py  contacts.py  hold_owner.py  price.py  publication_plan.py  region_metadata.py  region_settings.py  slot_key.py  store_content.py  timezone_name.py
src/infrastructure/alembic/: env.py
src/infrastructure/broker/: instance.py  taskiq.py
src/infrastructure/cache/: block.py
src/infrastructure/dev/: bootstrap.py  repos.py  scheduler.py  slots_mem.py
src/infrastructure/images/: pillow_plate_image_generator.py
src/infrastructure/repositories/: utils.py
src/infrastructure/scheduler/: taskiq_queue_scheduler.py
src/infrastructure/seeds/: runner.py  service_definitions.py
src/tests/: test.py
src/utils/: get_datetime_utc_now.py  logging.py  uuid_v7.py
(+368 files in other folders)
