[project]
name = "auto_nomera_v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram-dialog>=2.4.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "betterlogging>=1.0.0",
    "dishka>=1.8.0",
    "mypy>=1.19.1",
    "pillow>=12.1.1",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.1",
    "sqlalchemy>=2.0.46",
    "taskiq>=0.12.1",
    "taskiq-redis>=1.2.2",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
]
